<resources>
    <string name="app_name">Kmetrify</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Kmetrify!</string>
    <string name="introduction">Click the plus button to add the first day.</string>
    <string name="date">Date:</string>
    <string name="meter">Meter reading:</string>
    <string name="start_place">Starting place:</string>
    <string name="next_place">Next place:</string>
    <string name="add_place">Add next destination</string>
    <string name="add_finalplace">Final place:</string>
    <string name="save">Save</string>
    <string name="export">Export to Excel file</string>
</resources>
